# 04_Invoice_Receipt_Processing

./: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  requirements_colab.txt
.github/workflows/: ci.yml
Report and Slides/: Report.tex  Slides.tex
app/: gradio_app.py
configs/: infer.yaml  train.yaml
data/: README.md
deploy/: README_HF_SPACE.md
docs/: DESIGN_BRIEF.md  agent_architecture.md  architecture.md  continual_learning_monitoring.md  data_card.md  data_description.md  deployment.md  ethics_statement.md  model_card.md  model_selection.md  privacy_robustness.md  problem_definition.md  project_plan.md  slide_deck_outline.md  validation_evaluation.md
models/: README.md
notebooks/: COLAB_GUIDE.md  Invoice_AI_Colab_Training_H100_AUTOPILOT.ipynb
sample_data/: README.md
scripts/: download_data.sh  run_autopilot.sh  train.sh
src/invoice_ai/: __init__.py  cli.py  config.py  logging_utils.py
src/invoice_ai/agent/: __init__.py  invoice_agent.py  llm_orchestrator.py  state.py  tools.py  validation.py
src/invoice_ai/analysis/: __init__.py  error_analysis.py  latency.py
src/invoice_ai/api/: __init__.py  app_combined.py  dependencies.py  main.py  schemas.py  ui.py
src/invoice_ai/automation/: __init__.py  autopilot.py
src/invoice_ai/autoreport/: __init__.py  artifact_loader.py  charts.py  report_pdf.py  slides_pptx.py
src/invoice_ai/data/: __init__.py  dataset.py  download_dataset.py  samples.py
src/invoice_ai/grading/: __init__.py  checklist.py
src/invoice_ai/models/: __init__.py  baseline_regex.py  layout_extractor.py  model_registry.py
src/invoice_ai/monitoring/: __init__.py  drift_report.py
src/invoice_ai/ocr/: __init__.py  engine.py  pdf.py
src/invoice_ai/training/: __init__.py  evaluate.py  train_donut.py  train_layoutlmv3.py  tune.py
tests/: conftest.py  test_agent_and_regex.py  test_config_ocr.py  test_validation.py
